completd To_Do app

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -114,3 +114,8 @@ body {
     height: 20px;
     cursor: pointer;
 }
+
+.completed .task-text {
+    text-decoration: line-through;
+    color: gray;
+}
