added the auto focus in input field

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -69,6 +69,11 @@
 
 
     <script>
+
+        document.addEventListener("DOMContentLoaded", function () {
+            document.querySelector(".form-control").focus();
+        });
+
         document.addEventListener("DOMContentLoaded", function () {
             document.querySelectorAll(".form-check-input").forEach(checkbox => {
                 checkbox.addEventListener("change", function () {
